objects/LBI__Rule__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Description__c</fullName>
        <description>Give additional context about the purpose of this rule and why you are implementing it</description>
        <inlineHelpText>Give additional context about the purpose of this rule and why you are implementing it</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__IsStandardRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Standard Rules are default rules added by the LatticeEngines Package</description>
        <label>Is Standard Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__RuleClausesLogic__c</fullName>
        <description>Specify custom rule logic here. You may use parenthesis &quot;( )&quot; to group two or more criteria together using AND or OR. Note that only one level of grouping is allowed</description>
        <inlineHelpText>Specify custom rule logic here. You may use parenthesis &quot;( )&quot; to group two or more criteria together using AND or OR. Note that only one level of grouping is allowed</inlineHelpText>
        <label>Rule Clauses Logic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RuleName__c</fullName>
        <description>Define a name that describes the type of recommendations to be blocked</description>
        <inlineHelpText>Define a name that describes the type of recommendations to be blocked</inlineHelpText>
        <label>Rule Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RuleOrder__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RuleType__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Launch</fullName>
                    <default>true</default>
                    <label>Launch</label>
                </value>
                <value>
                    <fullName>Suppression</fullName>
                </value>
                <value>
                    <fullName>Play Group</fullName>
                </value>
                <value>
                    <fullName>Holdout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__StandardRuleKey__c</fullName>
        <externalId>true</externalId>
        <label>StandardRuleKey</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__RuleName__c</columns>
        <columns>LBI__RuleType__c</columns>
        <columns>LBI__IsStandardRule__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__Standard_Rules</fullName>
        <columns>NAME</columns>
        <columns>LBI__RuleName__c</columns>
        <columns>LBI__RuleType__c</columns>
        <columns>LBI__IsStandardRule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__IsStandardRule__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Standard Rules</label>
    </listViews>
    <listViews>
        <fullName>LBI__Suppression_Rules</fullName>
        <columns>NAME</columns>
        <columns>LBI__RuleOrder__c</columns>
        <columns>LBI__RuleName__c</columns>
        <columns>LBI__RuleType__c</columns>
        <columns>LBI__isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__RuleType__c</field>
            <operation>equals</operation>
            <value>Suppression</value>
        </filters>
        <label>Suppression Rules</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LBI__You_May_Not_Deactivate_a_Standard_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(LBI__isActive__c) &amp;&amp; LBI__IsStandardRule__c</errorConditionFormula>
        <errorDisplayField>LBI__isActive__c</errorDisplayField>
        <errorMessage>You May Not Deactivate a Standard Rule</errorMessage>
    </validationRules>
</CustomObject>